科目の説明を1000文字以内の表示に制限する

--- a/catalog/templates/catalog/broadcast_detail.html
+++ b/catalog/templates/catalog/broadcast_detail.html
@@ -4,7 +4,7 @@
 </head>
 <body>
     <h1>{{ broadcast.name }} - Details information</h1>
-    <p>{{ broadcast.description }}</p>
+    <p>{{ broadcast.short_description }}</p>
     {% if broadcast.teachers.all %}
     <h2>Teacher List</h2>
     <ul>
